--- a/aboutme.html
+++ b/aboutme.html
@@ -21,10 +21,11 @@
 				</tt>
 			</table>
 			  <h1 style="font-family:arial black;">This is all about me!</h1>
-				<br>
+				<hr><br>
 				<img src="Aeon.JPEG" width="300" height="400">
-				<p style="font-family:arial black; color:navy; font-size: 20px;">This text has the font Courier, is Blue, and 20px.</p>
 				<p style= "font-family:arial black;">I am a senior at RBHS! (Class of 2021)</p>
+				<p style="font-family:arial black; color:navy; font-size: 20px;">I like video games, listening to music, making digital art, and making memes.</p>
+            <img src="Shiba.JPEG" width="400" height="400"/>
 			   
 		  </center>	
 		</span>  
