--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</table>
 		<h1 style="font-family:arial black;"> Aeon's Homepage</h1>
 		<br><hr><br>
-		<img src="Shiba.JPEG" width="500" height="500"/>
+		<img src="House.JPEG" width="1000" height="1000"/>
 	  </center>	
 	</span>  
   </body>
