--- a/CSP2020-master/Website/portfolio.html
+++ b/CSP2020-master/Website/portfolio.html
@@ -5,14 +5,23 @@
 	    <title>Portfolio</title>
 	  </head>
 	  <body bgcolor="blue">
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">About Me</a>
-    <h1>This is my Portfolio Page!</h1>
-    <img src="images/portfolio.jpg" height="250">
-    <br>
-    <h1></h1>
-    <br>
-    <br>
+	  <span style='padding-top: 30px;font-size: 32px; color:navy'>
+		  <center>
+			<table width="100%" height="70">
+				<tr>
+					<td align="center" bgcolor="black">
+						<a href="index.html" style="color:white">Aeon's Homepage</a>
+					</td>
+					<td align="center" bgcolor="black">
+						<a href="portfolio.html" style="color:white">Portfolio</a>
+					</td>
+					<td align="center" bgcolor="black">
+						<a href="aboutme.html" style="color:white">About Me</a> 
+					</td>
+				</tt>
+			</table>
+			  <h1 style="font-family:arial black;"> This is my Portfolio Page!</h1>
+		  </center>	
+		</span>    
 	  </body>
 	</html>
