--- a/CSP2020-master/aboutme.html
+++ b/CSP2020-master/aboutme.html
@@ -5,22 +5,28 @@
 	    <title>About Me</title>
 	  </head>
 	  <body bgcolor="green">
-	  <center>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="aboutme.html">About Me</a>
-	<br>
-    <h1>This is all about me!</h1>
-    <br>
-	<img src="Aeon.JPEG" width="500" height="700">
-	<p>I am a senior at RBHS! (Class of 2021)</p>
-	
-	 <p> </p>
-    <h1>   </h1>
-    <br>
-    <h1>   </h1>
-    <br>
-    </a>
-	</center>
+		<span style='padding-top: 30px;font-size: 32px; color:navy'>
+		  <center>
+			<table width="100%" height="70">
+				<tr>
+					<td align="center" bgcolor="black">
+						<a href="index.html" style="color:white">Aeon's Homepage</a>
+					</td>
+					<td align="center" bgcolor="black">
+						<a href="portfolio.html" style="color:white">Portfolio</a>
+					</td>
+					<td align="center" bgcolor="black">
+						<a href="aboutme.html" style="color:white">About Me</a> 
+					</td>
+				</tt>
+			</table>
+			  <h1 style="font-family:arial black;">This is all about me!</h1>
+				<br>
+				<img src="Aeon.JPEG" width="300" height="400">
+				<p style="font-family:arial black; color:navy; font-size: 20px;">This text has the font Courier, is Blue, and 20px.</p>
+				<p style= "font-family:arial black;">I am a senior at RBHS! (Class of 2021)</p>
+			   
+		  </center>	
+		</span>  
 	  </body>
 	</html>
