--- a/CSP2020-master/index.html
+++ b/CSP2020-master/index.html
@@ -5,15 +5,25 @@
     <title>Aeon Tran's Homepage</title>
   </head>
   <body bgcolor="blue">
-	<span style='padding-top: 30px;font-size: 32px; color:white'>
+	<span style='padding-top: 30px;font-size: 32px; color:navy'>
 	  <center>
-	    <h1>This is Aeon's HomePage!</h1>
-		<a href="index.html">Aeon's Homepage</a>
-		<a href="portfolio.html">Portfolio</a>
-		<a href="aboutme.html">About Me</a> 
-		<p>
+	    <table width="100%" height="70">
+			<tr>
+				<td align="center" bgcolor="black">
+					<a href="index.html" style="color:white">Aeon's Homepage</a>
+				</td>
+				<td align="center" bgcolor="black">
+					<a href="portfolio.html" style="color:white">Portfolio</a>
+				</td>
+				<td align="center" bgcolor="black">
+					<a href="aboutme.html" style="color:white">About Me</a> 
+				</td>
+			</tt>
+		</table>
+		<h1 style="font-family:arial black;"> Aeon's Homepage</h1>
+		<br><hr><br>
 		<img src="Shiba.JPEG" width="500" height="500"/>
-	  </center>
+	  </center>	
 	</span>  
   </body>
 </html>
