--- a/Website/index.html
+++ b/Website/index.html
@@ -23,6 +23,7 @@
 		<h1 style="font-family:arial black;"> Aeon's Homepage</h1>
 		<br><hr><br>
 		<img src="House.JPEG" width="1000" height="1000"/>
+		<p style= "font-family:arial black;">Yup this is totally my house ;) </p>
 	  </center>	
 	</span>  
   </body>
