--- a/CSP2020-master/Website/portfolio.html
+++ b/CSP2020-master/Website/portfolio.html
@@ -21,6 +21,8 @@
 				</tt>
 			</table>
 			  <h1 style="font-family:arial black;"> This is my Portfolio Page!</h1>
+			  <img src="Lightbot.JPEG" width="400" height="400"/>
+			  <p style= "font-family:arial black;">In the lightbot program, we learned basic commands of a robot</p>
 		  </center>	
 		</span>    
 	  </body>
