--- a/CSP2020-master/index.html
+++ b/CSP2020-master/index.html
@@ -22,7 +22,8 @@
 		</table>
 		<h1 style="font-family:arial black;"> Aeon's Homepage</h1>
 		<br><hr><br>
-		<img src="Shiba.JPEG" width="500" height="500"/>
+		<img src="House.JPEG" width="1000" height="1000"/>
+		<p style= "font-family:arial black;">Yup this is totally my house ;) </p>
 	  </center>	
 	</span>  
   </body>
