--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@
 			<img src="Lazy.JPEG" width="400" height="400"/>
 			<img src="BackMeme.JPEG" width="400" height="400"/>
 			<img src="Shiba.JPEG" width="400" height="400"/>
-			   
+			<img src="KKSlider.JPEG" width="400" height="400"/>
 		  </center>	
 		</span>  
 	  </body>
