--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,8 @@
 			  <h1 style="font-family:arial black;"> This is my Portfolio Page!</h1>
 			  <img src="Lightbot.JPEG" width="400" height="400"/>
 			  <p style= "font-family:arial black;">In the lightbot program, we learned basic commands of a robot</p>
+			  <img src="1.1.9 project.JPEG" width="400" height="400"/>
+			  <p style= "font-family:arial black;">In the 1.1.9 project, I worked with the members of my group and used all of the codes and methods we learned in python</p>
 		  </center>	
 		</span>    
 	  </body>
