--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
 			  <h1 style="font-family:arial black;"> This is my Portfolio Page!</h1>
 			  <img src="Lightbot.JPEG" width="400" height="400"/>
 			  <p style= "font-family:arial black;">In the lightbot program, we learned basic commands of a robot</p>
-			  <img src="1.1.9 project.JPEG" width="400" height="400"/>
-			  <p style= "font-family:arial black;">In the 1.1.9 project, I worked with the members of my group and used all of the codes and methods we learned in python</p>
+			  <img src="1.1.9 project.JPEG" width="600" height="400"/>
+			  <p style= "font-family:arial black; font-size: 15px;">In the 1.1.9 project, I worked with the members of my group and implemented all of the codes and methods we have learned in PLTW lessons 1.1.1 to 1.1.8. We equally didived the work and created an aquatic background that features sea animals and underwater aspects. The main aspect of the project was to move a fish around until it touches a shark, which later becomes a muscular fish, using nested loops and iterations. Other minor details of the project included the movement of simple shapes, such as the bubbles, and the drawing of the other sea animals and background. </p>
 		  </center>	
 		</span>    
 	  </body>
