--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
 	    <meta charset="utf-8">
 	    <title>Portfolio</title>
 	  </head>
-	  <body bgcolor="blue">
-	  <span style='padding-top: 30px;font-size: 32px; color:navy'>
+	  <body bgcolor="red">
+	  <span style='padding-top: 30px;font-size: 32px; color:black'>
 		  <center>
 			<table width="100%" height="70">
 				<tr>
