--- a/aboutme.html
+++ b/aboutme.html
@@ -24,13 +24,14 @@
 				<hr><br>
 				<img src="Aeon.JPEG" width="300" height="400">
 				<p style= "font-family:arial black;">I am a senior at RBHS! (Class of 2021)</p>
-				<p style="font-family:arial black; color:navy; font-size: 20px;">I like video games, listening to music, hanging out with my cousins, being lazy, making memes, and shiba inus.</p>
+				<p style="font-family:arial black; color:white; font-size: 20px;">I like video games, listening to music, hanging out with my cousins, being lazy, making memes, and shiba inus.</p>
             <img src="ShibaGamer.JPEG" width="400" height="400"/>
 			<img src="Headphones.JPEG" width="400" height="400"/>
 			<img src="Cousins.JPEG" width="400" height="400"/>
 			<img src="Lazy.JPEG" width="400" height="400"/>
 			<img src="BackMeme.JPEG" width="400" height="400"/>
 			<img src="Shiba.JPEG" width="400" height="400"/>
+			<p style="font-family:arial black; color:white; font-size: 20px;">I also like to play animal crossing :3</p>
 			<img src="KKSlider.JPEG" width="400" height="400"/>
 		  </center>	
 		</span>  
