--- a/portfolio.html
+++ b/portfolio.html
@@ -25,6 +25,8 @@
 			  <p style= "font-family:arial black;">In the lightbot program, we learned basic commands of a robot</p>
 			  <img src="1.1.9 project.JPEG" width="600" height="400"/>
 			  <p style= "font-family:arial black; font-size: 15px;">In the 1.1.9 project, I worked with the members of my group and implemented all of the codes and methods we have learned in PLTW lessons 1.1.1 to 1.1.8. We equally didived the work and created an aquatic background that features sea animals and underwater aspects. The main aspect of the project was to move a fish around until it touches a shark, which later becomes a muscular fish, using nested loops and iterations. Other minor details of the project included the movement of simple shapes, such as the bubbles, and the drawing of the other sea animals and background. </p>
+		      <p src="dinogame.JPEG" width="600" height="400"/>
+			  <p style= "font-family:arial black; font-size: 15px;">In the 1.2.5 project I worked with the members of my group and created a video game based on the no wifi dino game. The player is able to control the dinosaur to dodge through obstacles as the score increases every second. The score stops when the dinosaur hits an obstacle. This includes user input with the arrow keys to control the dinosaur, and the letter keys to type the player's name. Overall we learned new things such as inputting user interface and revisited things like lists, and applied them to our project. </p>
 		  </center>	
 		</span>    
 	  </body>
